@@ -1,5 +1,8 @@
 Change Log
 =============
+2011/09/26 (setup.py 1.0.3)
+ - Added support to create test database
+
 2011/03/30 (setup.py 1.0.2)
  - Added support for Django-1.3
  - Backward compatibility - Same codebase works with Django 1.0.x, 1.1.x, 1.2.x and 1.3.x
